refactor: apply sonarlint suggestions